apps/commafeed/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      nodeSelector:
        veirt.dev/node-pool: vps
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: commafeed
          image: athou/commafeed:latest-h2
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: data-volume
              mountPath: /commafeed/data
              subPath: commafeed
          resources:
            limits:
              memory: "256Mi"
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
